fix: make sure brand colors work in dark mode as well

--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -1,8 +1,8 @@
 :root {
   --vp-c-brand-1: #c43c75;
-  --vp-c-brand-2: #912b81;
+  --vp-c-brand-2: #e34e65;
   --vp-c-brand-3: #c43c75;
-  --vp-c-brand-soft: #fbe9f0;
+  --vp-c-brand-soft: rgba(196, 60, 117, 0.13);
 }
 
 .VPFooter a {
